5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1638_2728.log
== SUBMITION (2019-04-08 21:24:37) 
-- CODE:
km = float(input("Percuso em km:"))
tp = input("Tipo do carro, A ou B:")

if(tp.upper() == A):
	msg = km/8
else:
	msg = km/12
print(msg)	
-- EXECUTION TIME:
0.103446
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2728/main.py", line 4, in <module>
    if(tp.upper() == A):
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:24:41) 
-- CODE:
km = float(input("Percuso em km:"))
tp = input("Tipo do carro, A ou B:")

if(tp.upper() == A):
	msg = km/8
else:
	msg = km/12
print(msg)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(tp.upper() == A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 21:25:05) 
-- CODE:
km = float(input("Percuso em km:"))
tp = input("Tipo do carro, A ou B:")

if(tp.upper() == "A"):
	msg = km/8
else:
	msg = km/12
print(msg)	
-- EXECUTION TIME:
0.205673
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:25:07) 
-- CODE:
km = float(input("Percuso em km:"))
tp = input("Tipo do carro, A ou B:")

if(tp.upper() == "A"):
	msg = km/8
else:
	msg = km/12
print(msg)	
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 21:25:29) 
-- CODE:
km = float(input("Percuso em km:"))
tp = input("Tipo do carro, A ou B:")

if(tp.upper() == "A"):
	msg = km/8
else:
	msg = km/12
print(round(msg, 2))	
-- EXECUTION TIME:
0.131065
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
